--- a/experiencia.html
+++ b/experiencia.html
@@ -1,30 +1,25 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Experiencia</title>
+  <title>EXPE | DSBC</title>
 </head>
 
 <body>
 
-<div style="
-  background-color: #f6f8fa;
-  padding: 60px 20px;
-">
-
+<div style="background-color:#f6f8fa; padding:60px 20px;">
   <div style="
-    max-width: 920px;
-    margin: auto;
-    background: white;
-    border-radius: 14px;
-    padding: 50px 60px;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.06);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', serif;
-    color: #24292f;
+    max-width:900px;
+    margin:auto;
+    background:white;
+    border-radius:14px;
+    padding:50px 60px;
+    box-shadow:0 10px 30px rgba(0,0,0,0.06);
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', serif;
+    color:#24292f;
   ">
 
     <h2>Experiencia</h2>
 
-    <!-- PASANTÍA -->
     <h3 style="color:#1f6feb; margin-bottom:4px;">
       Pasantía en Investigación
     </h3>
@@ -38,11 +33,10 @@
     </p>
 
     <p style="margin-top:8px; line-height:1.6;">
-      Apoyo en procesos de investigación académica, revisión y organización de información,
-      análisis de datos y elaboración de insumos para trabajos investigativos.
+      Apoyo en procesos de investigación académica, análisis de datos
+      y elaboración de insumos para trabajos investigativos.
     </p>
 
-    <!-- AUXILIAR ADMINISTRATIVO -->
     <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
       Auxiliar Administrativo
     </h3>
@@ -56,10 +50,10 @@
     </p>
 
     <p style="margin-top:8px; line-height:1.6;">
-      Apoyo en procesos administrativos, organización documental y manejo de información institucional.
+      Apoyo en procesos administrativos, organización documental
+      y manejo de información institucional.
     </p>
 
-    <!-- APOYO TÉCNICO -->
     <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
       Apoyo Técnico Administrativo
     </h3>
@@ -73,17 +67,17 @@
     </p>
 
     <p style="margin-top:8px; line-height:1.6;">
-      Apoyo técnico y administrativo en procesos operativos, control de información y acompañamiento a la gestión institucional.
+      Apoyo técnico y administrativo en procesos operativos
+      y acompañamiento a la gestión institucional.
     </p>
 
     <p style="margin-top:40px;">
-      <a href="../index.html" style="color:#1f6feb; text-decoration:none;">
+      <a href="index.html" style="color:#1f6feb; text-decoration:none;">
         ← Volver a la página principal
       </a>
     </p>
 
   </div>
-
 </div>
 
 </body>
