--- a/experiencia.html
+++ b/experiencia.html
@@ -20,32 +20,16 @@
 
     <h2>Experiencia</h2>
 
+    <!-- EXPERIENCIA 1 -->
     <h3 style="color:#1f6feb; margin-bottom:4px;">
-      Pasantía en Investigación
+      Apoyo Técnico Administrativo
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="documentos/semillero-territorio-ambiente.pdf"
+      <a href="soportes/experiencia/CERTIFICADO%20DE%20APOYO%20TECNICO%20ADMINISTRATIVO%20PORFIA%201.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
-        Semillero Territorio y Ambiente
-      </a>
-    </p>
-
-    <p style="margin-top:8px; line-height:1.6;">
-      Apoyo en procesos de investigación académica, análisis de datos
-      y elaboración de insumos para trabajos investigativos.
-    </p>
-
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
-      Auxiliar Administrativo
-    </h3>
-
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="documentos/hcb-porfia-1.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
-        Asociación de HCB Porfía 1 – Bienestar Familiar
+        Asociación HCB Porfía 1 – Bienestar Familiar
       </a>
     </p>
 
@@ -54,15 +38,16 @@
       y manejo de información institucional.
     </p>
 
+    <!-- EXPERIENCIA 2 -->
     <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
       Apoyo Técnico Administrativo
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="documentos/hcb-porfia-3.pdf"
+      <a href="soportes/experiencia/CERTIFICADO%20DE%20APOYO%20TECNICO%20ADMINISTRATIVO%20PORFIA%203.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
-        Asociación de HCB Porfía 3
+        Asociación HCB Porfía 3
       </a>
     </p>
 
@@ -71,6 +56,7 @@
       y acompañamiento a la gestión institucional.
     </p>
 
+    <!-- VOLVER -->
     <p style="margin-top:40px;">
       <a href="index.html" style="color:#1f6feb; text-decoration:none;">
         ← Volver a la página principal
@@ -82,3 +68,4 @@
 
 </body>
 </html>
+
