--- a/experiencia.html
+++ b/experiencia.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
@@ -20,8 +21,26 @@
 
     <h2>Experiencia</h2>
 
-    <!-- EXPERIENCIA 1 -->
+    <!-- PASANTÍA -->
     <h3 style="color:#1f6feb; margin-bottom:4px;">
+      Pasantía en Investigación
+    </h3>
+
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="soportes/investigaciones/ACTA.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Semillero Territorio y Ambiente
+      </a>
+    </p>
+
+    <p style="margin-top:8px; line-height:1.6;">
+      Apoyo en procesos de investigación académica, análisis de información
+      y elaboración de insumos para trabajos investigativos.
+    </p>
+
+    <!-- EXPERIENCIA 1 -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
       Apoyo Técnico Administrativo
     </h3>
 
@@ -29,7 +48,7 @@
       <a href="soportes/experiencia/CERTIFICADO%20DE%20APOYO%20TECNICO%20ADMINISTRATIVO%20PORFIA%201.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
-        Asociación HCB Porfía 1 – Bienestar Familiar
+        Asociación de HCB Porfía 1 – Bienestar Familiar
       </a>
     </p>
 
@@ -47,7 +66,7 @@
       <a href="soportes/experiencia/CERTIFICADO%20DE%20APOYO%20TECNICO%20ADMINISTRATIVO%20PORFIA%203.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
-        Asociación HCB Porfía 3
+        Asociación de HCB Porfía 3
       </a>
     </p>
 
@@ -56,7 +75,6 @@
       y acompañamiento a la gestión institucional.
     </p>
 
-    <!-- VOLVER -->
     <p style="margin-top:40px;">
       <a href="index.html" style="color:#1f6feb; text-decoration:none;">
         ← Volver a la página principal
