--- a/experiencia.html
+++ b/experiencia.html
@@ -20,12 +20,15 @@
 
     <h2>Experiencia</h2>
 
+    <!-- PASANTÍA -->
     <h3 style="color:#1f6feb; margin-bottom:4px;">
       Pasantía en Investigación
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/educacion/acta.pdf" target="_blank" style="color:inherit; text-decoration:none;">
+      <a href="./soportes/educacion/ACTA.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
         Certificado Semillero Territorio y Ambiente
       </a>
     </p>
@@ -35,13 +38,16 @@
       y elaboración de insumos para trabajos investigativos.
     </p>
 
+    <!-- EXPERIENCIA 1 -->
     <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
       Apoyo Técnico Administrativo
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/experiencia/certificado-apoyo-tecnico-porfia-1.pdf" target="_blank" style="color:inherit; text-decoration:none;">
-        Certificado Laboral Asociación HCB Porfía 1 – Bienestar Familiar
+      <a href="./soportes/experiencia/CERTIFICADO DE APOYO TECNICO ADMINISTRATIVO PORFIA 1.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Certificado Laboral Asociación de HCB Porfía 1 – Bienestar Familiar
       </a>
     </p>
 
@@ -50,13 +56,16 @@
       y manejo de información institucional.
     </p>
 
+    <!-- EXPERIENCIA 2 -->
     <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
       Apoyo Técnico Administrativo
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/experiencia/certificado-apoyo-tecnico-porfia-3.pdf" target="_blank" style="color:inherit; text-decoration:none;">
-        Certificado Laboral Asociación HCB Porfía 3 – Bienestar Familiar
+      <a href="./soportes/experiencia/CERTIFICADO DE APOYO TECNICO ADMINISTRATIVO PORFIA 3.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Certificado Laboral Asociación de HCB Porfía 3 – Bienestar Familiar
       </a>
     </p>
 
@@ -66,13 +75,17 @@
     </p>
 
     <p style="margin-top:40px;">
-      <a href="index.html" style="color:#1f6feb; text-decoration:none;">
+      <a href="./index.html" style="color:#1f6feb; text-decoration:none;">
         ← Volver a la página principal
       </a>
     </p>
 
   </div>
 </div>
+
+</body>
+</html>
+
 
 </body>
 </html>
