--- a/experiencia.html
+++ b/experiencia.html
@@ -26,7 +26,7 @@
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="./soportes/educacion/ACTA.pdf"
+      <a href="./soportes/investigaciones/ACTA.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
         Certificado Semillero Territorio y Ambiente
@@ -39,7 +39,7 @@
     </p>
 
     <!-- EXPERIENCIA 1 -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+    <h3 style="color:#1f6feb; margin-top:28px; margin-bottom:4px;">
       Apoyo Técnico Administrativo
     </h3>
 
@@ -47,7 +47,7 @@
       <a href="./soportes/experiencia/CERTIFICADO DE APOYO TECNICO ADMINISTRATIVO PORFIA 1.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
-        Certificado Laboral Asociación de HCB Porfía 1 – Bienestar Familiar
+        Certificado Laboral de la Asociación de HCB Porfía 1 – Bienestar Familiar
       </a>
     </p>
 
@@ -57,7 +57,7 @@
     </p>
 
     <!-- EXPERIENCIA 2 -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+    <h3 style="color:#1f6feb; margin-top:28px; margin-bottom:4px;">
       Apoyo Técnico Administrativo
     </h3>
 
@@ -65,7 +65,7 @@
       <a href="./soportes/experiencia/CERTIFICADO DE APOYO TECNICO ADMINISTRATIVO PORFIA 3.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
-        Certificado Laboral Asociación de HCB Porfía 3 – Bienestar Familiar
+        Certificado Laboral de la Asociación de HCB Porfía 3 – Bienestar Familiar
       </a>
     </p>
 
@@ -74,6 +74,7 @@
       y acompañamiento a la gestión institucional.
     </p>
 
+    <!-- VOLVER -->
     <p style="margin-top:40px;">
       <a href="./index.html" style="color:#1f6feb; text-decoration:none;">
         ← Volver a la página principal
@@ -85,8 +86,3 @@
 
 </body>
 </html>
-
-
-</body>
-</html>
-
