Update links and section titles in experiencia.html

--- a/experiencia.html
+++ b/experiencia.html
@@ -26,9 +26,7 @@
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="./soportes/investigaciones/ACTA.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
+      <a href="acta-academica.pdf" target="_blank" style="color:inherit; text-decoration:none;">
         Certificado Semillero Territorio y Ambiente
       </a>
     </p>
@@ -38,16 +36,14 @@
       y elaboración de insumos para trabajos investigativos.
     </p>
 
-    <!-- EXPERIENCIA 1 -->
-    <h3 style="color:#1f6feb; margin-top:28px; margin-bottom:4px;">
+    <!-- PORFÍA 1 -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
       Apoyo Técnico Administrativo
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="./soportes/experiencia/CERTIFICADO DE APOYO TECNICO ADMINISTRATIVO PORFIA 1.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
-        Certificado Laboral de la Asociación de HCB Porfía 1 – Bienestar Familiar
+      <a href="certificado-porfia-1.pdf" target="_blank" style="color:inherit; text-decoration:none;">
+        Certificado Laboral – Asociación de HCB Porfía 1 – Bienestar Familiar
       </a>
     </p>
 
@@ -56,16 +52,14 @@
       y manejo de información institucional.
     </p>
 
-    <!-- EXPERIENCIA 2 -->
-    <h3 style="color:#1f6feb; margin-top:28px; margin-bottom:4px;">
+    <!-- PORFÍA 3 -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
       Apoyo Técnico Administrativo
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="./soportes/experiencia/CERTIFICADO DE APOYO TECNICO ADMINISTRATIVO PORFIA 3.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
-        Certificado Laboral de la Asociación de HCB Porfía 3 – Bienestar Familiar
+      <a href="certificado-porfia-3.pdf" target="_blank" style="color:inherit; text-decoration:none;">
+        Certificado Laboral – Asociación de HCB Porfía 3 – Bienestar Familiar
       </a>
     </p>
 
@@ -74,9 +68,8 @@
       y acompañamiento a la gestión institucional.
     </p>
 
-    <!-- VOLVER -->
     <p style="margin-top:40px;">
-      <a href="./index.html" style="color:#1f6feb; text-decoration:none;">
+      <a href="index.html" style="color:#1f6feb; text-decoration:none;">
         ← Volver a la página principal
       </a>
     </p>
@@ -86,3 +79,4 @@
 
 </body>
 </html>
+
