Refactor internship section in experiencia.html
Updated formatting and improved link text for clarity.

--- a/experiencia.html
+++ b/experiencia.html
@@ -22,19 +22,21 @@
 
     <!-- PASANTÍA -->
     <h3 style="color:#1f6feb; margin-bottom:4px;">
-      Pasantía en Investigación
-    </h3>
+     Pasantía en Investigación
+</h3>
 
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="acta-academica.pdf" target="_blank" style="color:inherit; text-decoration:none;">
-        Certificado Semillero Territorio y Ambiente
-      </a>
-    </p>
+<p style="margin:0; font-style:italic; color:#1f6feb;">
+  <a href="acta-academica.pdf"
+     target="_blank"
+     style="color:inherit; text-decoration:none;">
+    Acta Académica – Semillero Territorio y Ambiente
+  </a>
+</p>
 
-    <p style="margin-top:8px; line-height:1.6;">
-      Apoyo en procesos de investigación académica, análisis de información
-      y elaboración de insumos para trabajos investigativos.
-    </p>
+<p style="margin-top:8px; line-height:1.6;">
+  Apoyo en procesos de investigación académica, análisis de información
+  y elaboración de insumos para trabajos investigativos.
+</p>
 
     <!-- PORFÍA 1 -->
     <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
