--- a/experiencia.html
+++ b/experiencia.html
@@ -20,23 +20,23 @@
 
     <h2>Experiencia</h2>
 
-    <!-- PASANTÍA -->
+    <!-- PASANTÍA / EPI -->
     <h3 style="color:#1f6feb; margin-bottom:4px;">
-     Pasantía en Investigación
-</h3>
+      Pasantía en Investigación
+    </h3>
 
-<p style="margin:0; font-style:italic; color:#1f6feb;">
-  <a href="acta-academica.pdf"
-     target="_blank"
-     style="color:inherit; text-decoration:none;">
-    Acta Académica – Semillero Territorio y Ambiente
-  </a>
-</p>
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="certificado-epi.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Certificado EPI
+      </a>
+    </p>
 
-<p style="margin-top:8px; line-height:1.6;">
-  Apoyo en procesos de investigación académica, análisis de información
-  y elaboración de insumos para trabajos investigativos.
-</p>
+    <p style="margin-top:8px; line-height:1.6;">
+      Apoyo en procesos de investigación académica, análisis de información
+      y elaboración de insumos para trabajos investigativos.
+    </p>
 
     <!-- PORFÍA 1 -->
     <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
@@ -44,8 +44,10 @@
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="certificado-porfia-1.pdf" target="_blank" style="color:inherit; text-decoration:none;">
-        Certificado Laboral – Asociación de HCB Porfía 1 – Bienestar Familiar
+      <a href="certificado-porfia-1.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Certificado Laboral – Asociación de HCB Porfía 1
       </a>
     </p>
 
@@ -60,8 +62,10 @@
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="certificado-porfia-3.pdf" target="_blank" style="color:inherit; text-decoration:none;">
-        Certificado Laboral – Asociación de HCB Porfía 3 – Bienestar Familiar
+      <a href="certificado-porfia-3.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Certificado Laboral – Asociación de HCB Porfía 3
       </a>
     </p>
 
@@ -81,4 +85,3 @@
 
 </body>
 </html>
-
