Add educational certificates and titles section

--- a/educacion.html
+++ b/educacion.html
@@ -20,27 +20,82 @@
 
     <h2>Educación</h2>
 
-    <h3 style="color:#1f6feb; margin-bottom:4px;">Economía</h3>
-
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      Universidad de los Llanos
-    </p>
-
-    <p style="margin-top:8px; line-height:1.6;">
-      Estudiante de pregrado en Economía, con formación en microeconomía, macroeconomía,
-      econometría básica y análisis económico aplicado.
-    </p>
-
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
-      Formación Técnica
+    <!-- CERTIFICADO DE CRÉDITOS -->
+    <h3 style="color:#1f6feb; margin-bottom:4px;">
+      Certificado de Créditos Académicos
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      Institución de formación técnica
+      <a href="certificado-creditos.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Documento soporte
+      </a>
     </p>
 
-    <p style="margin-top:8px; line-height:1.6;">
-      Formación orientada al apoyo administrativo y manejo de información.
+    <!-- ESG -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+      ESG – Estrategias de Sostenibilidad
+    </h3>
+
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="esg-estrategias-sostenibilidad.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Certificado académico
+      </a>
+    </p>
+
+    <!-- ECONOMETRÍA -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+      Introducción a la Econometría
+    </h3>
+
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="introduccion-econometria.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Certificado académico
+      </a>
+    </p>
+
+    <!-- TÍTULO -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+      Título Académico
+    </h3>
+
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="titulo-academico.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Documento oficial
+      </a>
+    </p>
+
+    <!-- ACTA -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+      Acta Académica
+    </h3>
+
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="acta-academica.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Documento institucional
+      </a>
+    </p>
+
+    <!-- CERTIFICADO FINAL -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+      Certificado Final
+    </h3>
+
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="certificado-final.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Documento oficial
+      </a>
     </p>
 
     <p style="margin-top:40px;">
