Refactor layout and update styles in educacion.html

--- a/educacion.html
+++ b/educacion.html
@@ -4,101 +4,75 @@
   <title>EDUC | DSBC</title>
 </head>
 
-<body>
+<body style="margin:0; background:#f6f8fa;">
 
-<div style="background-color:#f6f8fa; padding:60px 20px;">
+<div style="padding:70px 20px;">
   <div style="
-    max-width:900px;
+    max-width:880px;
     margin:auto;
     background:white;
-    border-radius:14px;
-    padding:50px 60px;
-    box-shadow:0 10px 30px rgba(0,0,0,0.06);
+    border-radius:16px;
+    padding:60px;
+    box-shadow:0 12px 35px rgba(0,0,0,0.08);
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', serif;
     color:#24292f;
   ">
 
-    <h2>Educación</h2>
-
-    <!-- CERTIFICADO DE CRÉDITOS -->
-    <h3 style="color:#1f6feb; margin-bottom:4px;">
-      Certificado de Créditos Académicos
-    </h3>
-
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="certificado-creditos.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
-        Documento soporte
-      </a>
+    <h2 style="margin-top:0;">Educación</h2>
+    <p style="color:#57606a; max-width:620px;">
+      Formación académica y documentos oficiales que respaldan el proceso educativo.
     </p>
 
-    <!-- ESG -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
-      ESG – Estrategias de Sostenibilidad
-    </h3>
-
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="esg-estrategias-sostenibilidad.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
-        Certificado académico
+    <!-- ITEM -->
+    <div style="margin-top:36px;">
+      <h3 style="margin-bottom:6px;">Certificado de Créditos Académicos</h3>
+      <a href="certificado-creditos.pdf" target="_blank"
+         style="color:#1f6feb; text-decoration:none; font-style:italic;">
+        📄 Documento soporte
       </a>
-    </p>
+    </div>
 
-    <!-- ECONOMETRÍA -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
-      Introducción a la Econometría
-    </h3>
-
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="introduccion-econometria.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
-        Certificado académico
+    <div style="margin-top:32px;">
+      <h3 style="margin-bottom:6px;">ESG – Estrategias de Sostenibilidad</h3>
+      <a href="esg-estrategias-sostenibilidad.pdf" target="_blank"
+         style="color:#1f6feb; text-decoration:none; font-style:italic;">
+        📄 Certificado académico
       </a>
-    </p>
+    </div>
 
-    <!-- TÍTULO -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
-      Título Académico
-    </h3>
-
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="titulo-academico.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
-        Documento oficial
+    <div style="margin-top:32px;">
+      <h3 style="margin-bottom:6px;">Introducción a la Econometría</h3>
+      <a href="introduccion-econometria.pdf" target="_blank"
+         style="color:#1f6feb; text-decoration:none; font-style:italic;">
+        📄 Certificado académico
       </a>
-    </p>
+    </div>
 
-    <!-- ACTA -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
-      Acta Académica
-    </h3>
-
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="acta-academica.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
-        Documento institucional
+    <div style="margin-top:32px;">
+      <h3 style="margin-bottom:6px;">Título Académico</h3>
+      <a href="titulo-academico.pdf" target="_blank"
+         style="color:#1f6feb; text-decoration:none; font-style:italic;">
+        📄 Documento oficial
       </a>
-    </p>
+    </div>
 
-    <!-- CERTIFICADO FINAL -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
-      Certificado Final
-    </h3>
-
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="certificado-final.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
-        Documento oficial
+    <div style="margin-top:32px;">
+      <h3 style="margin-bottom:6px;">Acta Académica</h3>
+      <a href="acta-academica.pdf" target="_blank"
+         style="color:#1f6feb; text-decoration:none; font-style:italic;">
+        📄 Documento institucional
       </a>
-    </p>
+    </div>
 
-    <p style="margin-top:40px;">
+    <div style="margin-top:32px;">
+      <h3 style="margin-bottom:6px;">Certificado Final</h3>
+      <a href="certificado-final.pdf" target="_blank"
+         style="color:#1f6feb; text-decoration:none; font-style:italic;">
+        📄 Documento oficial
+      </a>
+    </div>
+
+    <p style="margin-top:50px;">
       <a href="index.html" style="color:#1f6feb; text-decoration:none;">
         ← Volver a la página principal
       </a>
