Refactor educación.html to simplify structure

--- a/educacion.html
+++ b/educacion.html
@@ -1,85 +1,59 @@
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>EDUC | DSBC</title>
-</head>
+<h2>Educación</h2>
 
-<body style="margin:0; background:#f6f8fa;">
+<h3>
+  <a href="certificado-creditos.pdf" target="_blank">
+    Certificado de Créditos Académicos
+  </a>
+</h3>
+<p>
+  Documento que acredita los créditos cursados y aprobados dentro del programa académico.
+</p>
 
-<div style="padding:70px 20px;">
-  <div style="
-    max-width:880px;
-    margin:auto;
-    background:white;
-    border-radius:16px;
-    padding:60px;
-    box-shadow:0 12px 35px rgba(0,0,0,0.08);
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', serif;
-    color:#24292f;
-  ">
+<h3>
+  <a href="esg-estrategias-sostenibilidad.pdf" target="_blank">
+    ESG – Estrategias de Sostenibilidad
+  </a>
+</h3>
+<p>
+  Certificado de formación en estrategias de sostenibilidad, enfoque ESG y gestión responsable.
+</p>
 
-    <h2 style="margin-top:0;">Educación</h2>
-    <p style="color:#57606a; max-width:620px;">
-      Formación académica y documentos oficiales que respaldan el proceso educativo.
-    </p>
+<h3>
+  <a href="introduccion-econometria.pdf" target="_blank">
+    Introducción a la Econometría
+  </a>
+</h3>
+<p>
+  Certificado académico en fundamentos de econometría, análisis estadístico y modelos básicos.
+</p>
 
-    <!-- ITEM -->
-    <div style="margin-top:36px;">
-      <h3 style="margin-bottom:6px;">Certificado de Créditos Académicos</h3>
-      <a href="certificado-creditos.pdf" target="_blank"
-         style="color:#1f6feb; text-decoration:none; font-style:italic;">
-        📄 Documento soporte
-      </a>
-    </div>
+<h3>
+  <a href="titulo-academico.pdf" target="_blank">
+    Título Académico
+  </a>
+</h3>
+<p>
+  Documento oficial que acredita la obtención del título académico correspondiente.
+</p>
 
-    <div style="margin-top:32px;">
-      <h3 style="margin-bottom:6px;">ESG – Estrategias de Sostenibilidad</h3>
-      <a href="esg-estrategias-sostenibilidad.pdf" target="_blank"
-         style="color:#1f6feb; text-decoration:none; font-style:italic;">
-        📄 Certificado académico
-      </a>
-    </div>
+<h3>
+  <a href="acta-academica.pdf" target="_blank">
+    Acta Académica
+  </a>
+</h3>
+<p>
+  Acta institucional que certifica el cumplimiento de los requisitos académicos del programa.
+</p>
 
-    <div style="margin-top:32px;">
-      <h3 style="margin-bottom:6px;">Introducción a la Econometría</h3>
-      <a href="introduccion-econometria.pdf" target="_blank"
-         style="color:#1f6feb; text-decoration:none; font-style:italic;">
-        📄 Certificado académico
-      </a>
-    </div>
+<h3>
+  <a href="certificado-final.pdf" target="_blank">
+    Certificado Final
+  </a>
+</h3>
+<p>
+  Documento oficial de cierre y validación del proceso académico.
+</p>
 
-    <div style="margin-top:32px;">
-      <h3 style="margin-bottom:6px;">Título Académico</h3>
-      <a href="titulo-academico.pdf" target="_blank"
-         style="color:#1f6feb; text-decoration:none; font-style:italic;">
-        📄 Documento oficial
-      </a>
-    </div>
-
-    <div style="margin-top:32px;">
-      <h3 style="margin-bottom:6px;">Acta Académica</h3>
-      <a href="acta-academica.pdf" target="_blank"
-         style="color:#1f6feb; text-decoration:none; font-style:italic;">
-        📄 Documento institucional
-      </a>
-    </div>
-
-    <div style="margin-top:32px;">
-      <h3 style="margin-bottom:6px;">Certificado Final</h3>
-      <a href="certificado-final.pdf" target="_blank"
-         style="color:#1f6feb; text-decoration:none; font-style:italic;">
-        📄 Documento oficial
-      </a>
-    </div>
-
-    <p style="margin-top:50px;">
-      <a href="index.html" style="color:#1f6feb; text-decoration:none;">
-        ← Volver a la página principal
-      </a>
-    </p>
-
-  </div>
-</div>
-
-</body>
-</html>
+<p>
+  <a href="index.html">← Volver a la página principal</a>
+</p>
