Refactor education section with improved formatting

--- a/educacion.html
+++ b/educacion.html
@@ -1,57 +1,45 @@
 <h2>Educación</h2>
 
-<h3>
+<p>
   <a href="certificado-creditos.pdf" target="_blank">
     Certificado de Créditos Académicos
-  </a>
-</h3>
-<p>
-  Documento que acredita los créditos cursados y aprobados dentro del programa académico.
+  </a><br>
+  <em>Documento que acredita los créditos cursados y aprobados dentro del programa académico.</em>
 </p>
 
-<h3>
+<p>
   <a href="esg-estrategias-sostenibilidad.pdf" target="_blank">
     ESG – Estrategias de Sostenibilidad
-  </a>
-</h3>
-<p>
-  Certificado de formación en estrategias de sostenibilidad, enfoque ESG y gestión responsable.
+  </a><br>
+  <em>Certificado de formación en estrategias de sostenibilidad, enfoque ESG y gestión responsable.</em>
 </p>
 
-<h3>
+<p>
   <a href="introduccion-econometria.pdf" target="_blank">
     Introducción a la Econometría
-  </a>
-</h3>
-<p>
-  Certificado académico en fundamentos de econometría, análisis estadístico y modelos básicos.
+  </a><br>
+  <em>Certificado académico en fundamentos de econometría, análisis estadístico y modelos básicos.</em>
 </p>
 
-<h3>
+<p>
   <a href="titulo-academico.pdf" target="_blank">
     Título Académico
-  </a>
-</h3>
-<p>
-  Documento oficial que acredita la obtención del título académico correspondiente.
+  </a><br>
+  <em>Documento oficial que acredita la obtención del título académico correspondiente.</em>
 </p>
 
-<h3>
+<p>
   <a href="acta-academica.pdf" target="_blank">
     Acta Académica
-  </a>
-</h3>
-<p>
-  Acta institucional que certifica el cumplimiento de los requisitos académicos del programa.
+  </a><br>
+  <em>Acta institucional que certifica el cumplimiento de los requisitos académicos del programa.</em>
 </p>
 
-<h3>
+<p>
   <a href="certificado-final.pdf" target="_blank">
     Certificado Final
-  </a>
-</h3>
-<p>
-  Documento oficial de cierre y validación del proceso académico.
+  </a><br>
+  <em>Documento oficial de cierre y validación del proceso académico.</em>
 </p>
 
 <p>
