Refactor educacion.html structure and content

--- a/educacion.html
+++ b/educacion.html
@@ -1,47 +1,141 @@
-<h2>Educación</h2>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>EDUC | DSBC</title>
+</head>
 
-<p>
-  <a href="certificado-creditos.pdf" target="_blank">
-    Certificado de Créditos Académicos
-  </a><br>
-  <em>Documento que acredita los créditos cursados y aprobados dentro del programa académico.</em>
-</p>
+<body>
 
-<p>
-  <a href="esg-estrategias-sostenibilidad.pdf" target="_blank">
-    ESG – Estrategias de Sostenibilidad
-  </a><br>
-  <em>Certificado de formación en estrategias de sostenibilidad, enfoque ESG y gestión responsable.</em>
-</p>
+<div style="background-color:#f6f8fa; padding:60px 20px;">
+  <div style="
+    max-width:900px;
+    margin:auto;
+    background:white;
+    border-radius:14px;
+    padding:50px 60px;
+    box-shadow:0 10px 30px rgba(0,0,0,0.06);
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', serif;
+    color:#24292f;
+  ">
 
-<p>
-  <a href="introduccion-econometria.pdf" target="_blank">
-    Introducción a la Econometría
-  </a><br>
-  <em>Certificado académico en fundamentos de econometría, análisis estadístico y modelos básicos.</em>
-</p>
+    <h2>Educación</h2>
 
-<p>
-  <a href="titulo-academico.pdf" target="_blank">
-    Título Académico
-  </a><br>
-  <em>Documento oficial que acredita la obtención del título académico correspondiente.</em>
-</p>
+    <!-- CRÉDITOS -->
+    <h3 style="color:#1f6feb; margin-bottom:4px;">
+      Certificado de Créditos Académicos
+    </h3>
 
-<p>
-  <a href="acta-academica.pdf" target="_blank">
-    Acta Académica
-  </a><br>
-  <em>Acta institucional que certifica el cumplimiento de los requisitos académicos del programa.</em>
-</p>
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="certificado-creditos.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Documento académico
+      </a>
+    </p>
 
-<p>
-  <a href="certificado-final.pdf" target="_blank">
-    Certificado Final
-  </a><br>
-  <em>Documento oficial de cierre y validación del proceso académico.</em>
-</p>
+    <p style="margin-top:8px; line-height:1.6;">
+      Documento que acredita los créditos cursados y aprobados
+      dentro del programa académico.
+    </p>
 
-<p>
-  <a href="index.html">← Volver a la página principal</a>
-</p>
+    <!-- ESG -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+      ESG – Estrategias de Sostenibilidad
+    </h3>
+
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="esg-estrategias-sostenibilidad.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Certificado de formación
+      </a>
+    </p>
+
+    <p style="margin-top:8px; line-height:1.6;">
+      Certificación en estrategias de sostenibilidad,
+      enfoque ESG y gestión responsable.
+    </p>
+
+    <!-- ECONOMETRÍA -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+      Introducción a la Econometría
+    </h3>
+
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="introduccion-econometria.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Certificado académico
+      </a>
+    </p>
+
+    <p style="margin-top:8px; line-height:1.6;">
+      Formación en fundamentos de econometría,
+      análisis estadístico y modelos básicos.
+    </p>
+
+    <!-- TÍTULO -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+      Título Académico
+    </h3>
+
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="titulo-academico.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Documento oficial
+      </a>
+    </p>
+
+    <p style="margin-top:8px; line-height:1.6;">
+      Documento oficial que acredita la obtención
+      del título académico correspondiente.
+    </p>
+
+    <!-- ACTA -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+      Acta Académica
+    </h3>
+
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="acta-academica.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Documento institucional
+      </a>
+    </p>
+
+    <p style="margin-top:8px; line-height:1.6;">
+      Acta institucional que certifica el cumplimiento
+      de los requisitos académicos del programa.
+    </p>
+
+    <!-- FINAL -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+      Certificado Final
+    </h3>
+
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="certificado-final.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Documento oficial
+      </a>
+    </p>
+
+    <p style="margin-top:8px; line-height:1.6;">
+      Documento de cierre y validación
+      del proceso académico.
+    </p>
+
+    <p style="margin-top:40px;">
+      <a href="index.html" style="color:#1f6feb; text-decoration:none;">
+        ← Volver a la página principal
+      </a>
+    </p>
+
+  </div>
+</div>
+
+</body>
+</html>
