Update educational document descriptions and titles

--- a/educacion.html
+++ b/educacion.html
@@ -20,7 +20,7 @@
 
     <h2>Educación</h2>
 
-    <!-- CRÉDITOS -->
+    <!-- CERTIFICADO DE CRÉDITOS -->
     <h3 style="color:#1f6feb; margin-bottom:4px;">
       Certificado de Créditos Académicos
     </h3>
@@ -29,7 +29,7 @@
       <a href="certificado-creditos.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
-        Documento académico
+        Documento soporte
       </a>
     </p>
 
@@ -47,12 +47,12 @@
       <a href="esg-estrategias-sostenibilidad.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
-        Certificado de formación
+        Certificado académico
       </a>
     </p>
 
     <p style="margin-top:8px; line-height:1.6;">
-      Certificación en estrategias de sostenibilidad,
+      Certificado de formación en estrategias de sostenibilidad,
       enfoque ESG y gestión responsable.
     </p>
 
@@ -70,7 +70,7 @@
     </p>
 
     <p style="margin-top:8px; line-height:1.6;">
-      Formación en fundamentos de econometría,
+      Certificado académico en fundamentos de econometría,
       análisis estadístico y modelos básicos.
     </p>
 
@@ -88,8 +88,9 @@
     </p>
 
     <p style="margin-top:8px; line-height:1.6;">
-      Documento oficial que acredita la obtención
-      del título académico correspondiente.
+      Documento oficial que otorga el título de
+      Técnico en Contabilización de Operaciones Comerciales
+      y Financieras, expedido por el SENA.
     </p>
 
     <!-- ACTA -->
@@ -101,16 +102,16 @@
       <a href="acta-academica.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
-        Documento institucional
+        Acta de Grado
       </a>
     </p>
 
     <p style="margin-top:8px; line-height:1.6;">
-      Acta institucional que certifica el cumplimiento
-      de los requisitos académicos del programa.
+      Acta de Grado expedida por el SENA que certifica
+      la culminación y aprobación del proceso formativo.
     </p>
 
-    <!-- FINAL -->
+    <!-- CERTIFICADO FINAL -->
     <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
       Certificado Final
     </h3>
@@ -124,8 +125,8 @@
     </p>
 
     <p style="margin-top:8px; line-height:1.6;">
-      Documento de cierre y validación
-      del proceso académico.
+      Documento oficial que detalla las calificaciones obtenidas
+      y la intensidad horaria total del curso.
     </p>
 
     <p style="margin-top:40px;">
