--- a/investigaciones.html
+++ b/investigaciones.html
@@ -1,7 +1,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>INV | DSBC</title>
+  <title>INVE | DSBC</title>
 </head>
 
 <body>
@@ -20,11 +20,81 @@
 
     <h2>Investigaciones</h2>
 
-    <ul style="line-height:1.8;">
-      <li>Análisis económico aplicado</li>
-      <li>Economía urbana y ordenamiento territorial</li>
-      <li>Desarrollo sostenible y problemáticas sociales</li>
-    </ul>
+    <!-- ORDENAMIENTO TERRITORIAL -->
+    <h3 style="color:#1f6feb; margin-bottom:4px;">
+      Estrategias Integrales para el Ordenamiento Territorial
+    </h3>
+
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="avance-investigacion-ordenamiento-territorial-meta.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Avance de investigación – Subregión Ariari (Meta)
+      </a>
+    </p>
+
+    <p style="margin-top:8px; line-height:1.6;">
+      Documento de avance investigativo orientado al análisis del
+      ordenamiento territorial y el desarrollo regional sostenible
+      en el departamento del Meta.
+    </p>
+
+    <!-- COCA Y PIB -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+      Impacto Económico de la Producción de Coca en el PIB
+    </h3>
+
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="impacto-economico-coca-pib-narino-1999-2023.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Investigación económica aplicada
+      </a>
+    </p>
+
+    <p style="margin-top:8px; line-height:1.6;">
+      Análisis del impacto económico de la producción de coca
+      en el Producto Interno Bruto del departamento de Nariño
+      durante el periodo 1999–2023.
+    </p>
+
+    <!-- ÍNDICE MULTIDIMENSIONAL -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+      Índice Multidimensional de Bogotá
+    </h3>
+
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="indice-multidimensional-bogota-2013-2023.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Documento de análisis estadístico
+      </a>
+    </p>
+
+    <p style="margin-top:8px; line-height:1.6;">
+      Estudio del comportamiento del índice multidimensional
+      en la ciudad de Bogotá entre los años 2013 y 2023,
+      con enfoque socioeconómico.
+    </p>
+
+    <!-- MODELO AMBIENTAL -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+      Modelo de Interacción Ambiental
+    </h3>
+
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="modelo-interaccion-ambiental-alma-viva.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Parque Metropolitano Alma Viva
+      </a>
+    </p>
+
+    <p style="margin-top:8px; line-height:1.6;">
+      Propuesta de modelo de interacción ambiental aplicada
+      al Parque Metropolitano Alma Viva, con énfasis en
+      sostenibilidad y gestión ambiental urbana.
+    </p>
 
     <p style="margin-top:40px;">
       <a href="index.html" style="color:#1f6feb; text-decoration:none;">
@@ -37,3 +107,4 @@
 
 </body>
 </html>
+
