--- a/investigaciones.html
+++ b/investigaciones.html
@@ -83,17 +83,17 @@
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="modelo-interaccion-ambiental-alma-viva.pdf"
+      <a href="soportes/investigaciones/Modelo de Interacción Ambiental - Parque Metropolitano Alma Viva.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
-        Parque Metropolitano Alma Viva
+        Modelo de Interacción Ambiental – Parque Metropolitano Alma Viva
       </a>
     </p>
 
     <p style="margin-top:8px; line-height:1.6;">
-      Propuesta de modelo de interacción ambiental aplicada
-      al Parque Metropolitano Alma Viva, con énfasis en
-      sostenibilidad y gestión ambiental urbana.
+      Documento de investigación orientado al análisis de la interacción ambiental
+      en el Parque Metropolitano Alma Viva, con énfasis en sostenibilidad,
+      gestión ambiental y evaluación de dinámicas territoriales.
     </p>
 
     <p style="margin-top:40px;">
@@ -107,4 +107,3 @@
 
 </body>
 </html>
-
