--- a/investigaciones.html
+++ b/investigaciones.html
@@ -26,7 +26,7 @@
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/investigaciones/avance_investigacion_ordenamiento_territorial_meta.pdf"
+      <a href="avance-investigacion-ordenamiento-territorial-meta.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
         Avance de investigación – Subregión Ariari (Meta)
@@ -45,7 +45,7 @@
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/investigaciones/impacto_economico_coca_pib_narino_1999_2023.pdf"
+      <a href="impacto-economico-coca-pib-narino-1999-2023.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
         Investigación económica aplicada
@@ -64,7 +64,7 @@
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/investigaciones/indice_multidimensional_bogota_2013_2023.pdf"
+      <a href="indice-multidimensional-bogota-2013-2023.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
         Documento de análisis estadístico
@@ -83,7 +83,7 @@
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/investigaciones/modelo_interaccion_ambiental_alma_viva.pdf"
+      <a href="soportes/investigaciones/Modelo de Interacción Ambiental - Parque Metropolitano Alma Viva.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
         Modelo de Interacción Ambiental – Parque Metropolitano Alma Viva
@@ -91,9 +91,9 @@
     </p>
 
     <p style="margin-top:8px; line-height:1.6;">
-      Documento de investigación orientado al análisis de la interacción ambiental
-      en el Parque Metropolitano Alma Viva, con énfasis en sostenibilidad,
-      gestión ambiental y evaluación de dinámicas territoriales.
+      Propuesta de modelo de interacción ambiental aplicada
+      al Parque Metropolitano Alma Viva, con énfasis en
+      sostenibilidad y gestión ambiental urbana.
     </p>
 
     <p style="margin-top:40px;">
