--- a/investigaciones.html
+++ b/investigaciones.html
@@ -83,7 +83,7 @@
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf.pdf"
+      <a href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
         Modelo de Interacción Ambiental – Parque Metropolitano Alma Viva
