--- a/experiencia.html
+++ b/experiencia.html
@@ -26,7 +26,7 @@
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="certificado-epi.pdf"
+      <a href="soportes/experiencia/pasantia-investigacion.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
         Certificado EPI
@@ -44,7 +44,7 @@
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="certificado-porfia-1.pdf"
+      <a href="soportes/experiencia/apoyo-tecnico-porfia-1.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
         Certificado Laboral – Asociación de HCB Porfía 1
@@ -62,7 +62,7 @@
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="certificado-porfia-3.pdf"
+      <a href="soportes/experiencia/apoyo-tecnico-porfia-3.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
         Certificado Laboral – Asociación de HCB Porfía 3
