--- a/investigaciones.html
+++ b/investigaciones.html
@@ -26,7 +26,7 @@
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="avance-investigacion-ordenamiento-territorial-meta.pdf"
+      <a href="soportes/investigaciones/avance-investigacion-ordenamiento-territorial-meta.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
         Avance de investigación – Subregión Ariari (Meta)
@@ -45,7 +45,7 @@
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="impacto-economico-coca-pib-narino-1999-2023.pdf"
+      <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
         Investigación económica aplicada
@@ -64,7 +64,7 @@
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="indice-multidimensional-bogota-2013-2023.pdf"
+      <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
         Documento de análisis estadístico
@@ -95,6 +95,20 @@
       al Parque Metropolitano Alma Viva, con énfasis en
       sostenibilidad y gestión ambiental urbana.
     </p>
+
+    <!-- FORMULACIÓN DE PROYECTOS -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+      Formulación de Proyectos
+    </h3>
+
+    <ul style="margin-top:0; padding-left:20px;">
+      <li><a href="soportes/investigaciones/formulacion-de-proyectos/estudio-normativo.pdf" target="_blank">Estudio Normativo</a></li>
+      <li><a href="soportes/investigaciones/formulacion-de-proyectos/mapa-de-valor.pdf" target="_blank">Mapa de Valor</a></li>
+      <li><a href="soportes/investigaciones/formulacion-de-proyectos/mapeo-de-stakeholders.pdf" target="_blank">Mapeo de Stakeholders</a></li>
+      <li><a href="soportes/investigaciones/formulacion-de-proyectos/relacion-de-actores.pdf" target="_blank">Relación de Actores</a></li>
+      <li><a href="soportes/investigaciones/formulacion-de-proyectos/stakeholders.pdf" target="_blank">Stakeholders</a></li>
+      <li><a href="soportes/investigaciones/formulacion-de-proyectos/tipos-de-involucrados.pdf" target="_blank">Tipos de Involucrados</a></li>
+    </ul>
 
     <p style="margin-top:40px;">
       <a href="index.html" style="color:#1f6feb; text-decoration:none;">
