--- a/educacion.html
+++ b/educacion.html
@@ -74,13 +74,13 @@
       análisis estadístico y modelos básicos.
     </p>
 
-    <!-- TÍTULO -->
+    <!-- DOCUMENTO OFICIAL TCOCF -->
     <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
-      Título Académico
+      Documento Oficial TCOCF
     </h3>
 
     <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/educacion/titulo-academico.pdf"
+      <a href="soportes/educacion/documento-oficial-tcocf.pdf"
          target="_blank"
          style="color:inherit; text-decoration:none;">
         Documento oficial
@@ -88,9 +88,8 @@
     </p>
 
     <p style="margin-top:8px; line-height:1.6;">
-      Documento oficial que otorga el título de
-      Técnico en Contabilización de Operaciones Comerciales
-      y Financieras, expedido por el SENA.
+      Documento oficial que certifica la formación y acreditación
+      en el programa Técnico en Contabilización de Operaciones Comerciales y Financieras.
     </p>
 
     <!-- ACTA -->
@@ -109,6 +108,25 @@
     <p style="margin-top:8px; line-height:1.6;">
       Acta de Grado expedida por el SENA que certifica
       la culminación y aprobación del proceso formativo.
+    </p>
+
+    <!-- TÍTULO ACADÉMICO -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+      Título Académico
+    </h3>
+
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="soportes/educacion/titulo-academico.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Documento oficial
+      </a>
+    </p>
+
+    <p style="margin-top:8px; line-height:1.6;">
+      Documento oficial que otorga el título de
+      Técnico en Contabilización de Operaciones Comerciales
+      y Financieras, expedido por el SENA.
     </p>
 
     <!-- CERTIFICADO FINAL -->
