--- a/investigaciones.html
+++ b/investigaciones.html
@@ -2,122 +2,108 @@
 <head>
   <meta charset="UTF-8">
   <title>INVE | DSBC</title>
+  <style>
+    body { background-color:#f6f8fa; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', serif; color:#24292f; }
+    .container { max-width:900px; margin:auto; background:white; border-radius:14px; padding:50px 60px; box-shadow:0 10px 30px rgba(0,0,0,0.06); }
+    h2 { margin-bottom:20px; }
+    h3 { color:#1f6feb; margin-top:24px; margin-bottom:4px; }
+    p { margin:0; line-height:1.6; }
+    .doc-link { font-style:italic; color:#1f6feb; text-decoration:none; }
+    .project-grid { display:grid; grid-template-columns:repeat(auto-fit, minmax(250px, 1fr)); gap:20px; margin-top:20px; }
+    .project-card { background:#f6f8fa; border-radius:10px; padding:15px; text-align:center; box-shadow:0 4px 12px rgba(0,0,0,0.05); }
+    .project-card a { color:#1f6feb; font-style:italic; text-decoration:none; display:block; margin-top:8px; }
+  </style>
 </head>
 
 <body>
 
-<div style="background-color:#f6f8fa; padding:60px 20px;">
-  <div style="
-    max-width:900px;
-    margin:auto;
-    background:white;
-    border-radius:14px;
-    padding:50px 60px;
-    box-shadow:0 10px 30px rgba(0,0,0,0.06);
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', serif;
-    color:#24292f;
-  ">
+<div class="container">
+  <h2>Investigaciones</h2>
 
-    <h2>Investigaciones</h2>
+  <!-- ORDENAMIENTO TERRITORIAL -->
+  <h3>Estrategias Integrales para el Ordenamiento Territorial</h3>
+  <p><a class="doc-link" href="soportes/investigaciones/avance-investigacion-ordenamiento-territorial-meta.pdf" target="_blank">
+    Avance de investigación – Subregión Ariari (Meta)
+  </a></p>
+  <p>Documento de avance investigativo orientado al análisis del ordenamiento territorial y el desarrollo regional sostenible en el departamento del Meta.</p>
 
-    <!-- ORDENAMIENTO TERRITORIAL -->
-    <h3 style="color:#1f6feb; margin-bottom:4px;">
-      Estrategias Integrales para el Ordenamiento Territorial
-    </h3>
+  <!-- COCA Y PIB -->
+  <h3>Impacto Económico de la Producción de Coca en el PIB</h3>
+  <p><a class="doc-link" href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf" target="_blank">
+    Investigación económica aplicada
+  </a></p>
+  <p>Análisis del impacto económico de la producción de coca en el Producto Interno Bruto del departamento de Nariño durante el periodo 1999–2023.</p>
 
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/investigaciones/avance-investigacion-ordenamiento-territorial-meta.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
-        Avance de investigación – Subregión Ariari (Meta)
-      </a>
-    </p>
+  <!-- ÍNDICE MULTIDIMENSIONAL -->
+  <h3>Índice Multidimensional de Bogotá</h3>
+  <p><a class="doc-link" href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf" target="_blank">
+    Documento de análisis estadístico
+  </a></p>
+  <p>Estudio del comportamiento del índice multidimensional en la ciudad de Bogotá entre los años 2013 y 2023, con enfoque socioeconómico.</p>
 
-    <p style="margin-top:8px; line-height:1.6;">
-      Documento de avance investigativo orientado al análisis del
-      ordenamiento territorial y el desarrollo regional sostenible
-      en el departamento del Meta.
-    </p>
+  <!-- MODELO AMBIENTAL -->
+  <h3>Modelo de Interacción Ambiental</h3>
+  <p><a class="doc-link" href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf" target="_blank">
+    Modelo de Interacción Ambiental – Parque Metropolitano Alma Viva
+  </a></p>
+  <p>Propuesta de modelo de interacción ambiental aplicada al Parque Metropolitano Alma Viva, con énfasis en sostenibilidad y gestión ambiental urbana.</p>
 
-    <!-- COCA Y PIB -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
-      Impacto Económico de la Producción de Coca en el PIB
-    </h3>
+  <!-- DE LA GUERRA A LA SOÑADA PAZ -->
+  <h3>De la Guerra a la Soñada Paz</h3>
+  <p><a class="doc-link" href="soportes/investigaciones/de-la-guerra-a-la-sonada-paz.pdf" target="_blank">
+    Documento de investigación social
+  </a></p>
+  <p>Estudio de la transición social y comunitaria en contextos postconflicto, orientado a la paz territorial.</p>
 
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
-        Investigación económica aplicada
-      </a>
-    </p>
+  <!-- FORMULACIÓN DE PROYECTOS -->
+  <h3 style="margin-top:40px;">Formulación de Proyectos – Ecohotel “Los Arrendajos”</h3>
+  <p>Desarrollo de un proyecto de Ecohotel enfocado en sostenibilidad, turismo responsable y conservación ambiental.</p>
 
-    <p style="margin-top:8px; line-height:1.6;">
-      Análisis del impacto económico de la producción de coca
-      en el Producto Interno Bruto del departamento de Nariño
-      durante el periodo 1999–2023.
-    </p>
-
-    <!-- ÍNDICE MULTIDIMENSIONAL -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
-      Índice Multidimensional de Bogotá
-    </h3>
-
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
-        Documento de análisis estadístico
-      </a>
-    </p>
-
-    <p style="margin-top:8px; line-height:1.6;">
-      Estudio del comportamiento del índice multidimensional
-      en la ciudad de Bogotá entre los años 2013 y 2023,
-      con enfoque socioeconómico.
-    </p>
-
-    <!-- MODELO AMBIENTAL -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
-      Modelo de Interacción Ambiental
-    </h3>
-
-    <p style="margin:0; font-style:italic; color:#1f6feb;">
-      <a href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf"
-         target="_blank"
-         style="color:inherit; text-decoration:none;">
-        Modelo de Interacción Ambiental – Parque Metropolitano Alma Viva
-      </a>
-    </p>
-
-    <p style="margin-top:8px; line-height:1.6;">
-      Propuesta de modelo de interacción ambiental aplicada
-      al Parque Metropolitano Alma Viva, con énfasis en
-      sostenibilidad y gestión ambiental urbana.
-    </p>
-
-    <!-- FORMULACIÓN DE PROYECTOS -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
-      Formulación de Proyectos
-    </h3>
-
-    <ul style="margin-top:0; padding-left:20px;">
-      <li><a href="soportes/investigaciones/formulacion-de-proyectos/estudio-normativo.pdf" target="_blank">Estudio Normativo</a></li>
-      <li><a href="soportes/investigaciones/formulacion-de-proyectos/mapa-de-valor.pdf" target="_blank">Mapa de Valor</a></li>
-      <li><a href="soportes/investigaciones/formulacion-de-proyectos/mapeo-de-stakeholders.pdf" target="_blank">Mapeo de Stakeholders</a></li>
-      <li><a href="soportes/investigaciones/formulacion-de-proyectos/relacion-de-actores.pdf" target="_blank">Relación de Actores</a></li>
-      <li><a href="soportes/investigaciones/formulacion-de-proyectos/stakeholders.pdf" target="_blank">Stakeholders</a></li>
-      <li><a href="soportes/investigaciones/formulacion-de-proyectos/tipos-de-involucrados.pdf" target="_blank">Tipos de Involucrados</a></li>
-    </ul>
-
-    <p style="margin-top:40px;">
-      <a href="index.html" style="color:#1f6feb; text-decoration:none;">
-        ← Volver a la página principal
-      </a>
-    </p>
-
+  <div class="project-grid">
+    <div class="project-card">
+      <strong>Estudio Normativo</strong>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/estudio-normativo.pdf" target="_blank">Ver PDF</a>
+    </div>
+    <div class="project-card">
+      <strong>Mapa de Valor</strong>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/mapa-de-valor.pdf" target="_blank">Ver PDF</a>
+    </div>
+    <div class="project-card">
+      <strong>Mapeo de Stakeholders</strong>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/mapeo-de-stakeholders.pdf" target="_blank">Ver PDF</a>
+    </div>
+    <div class="project-card">
+      <strong>Relación de Actores</strong>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/relacion-de-actores.pdf" target="_blank">Ver PDF</a>
+    </div>
+    <div class="project-card">
+      <strong>Stakeholders</strong>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/stakeholders.pdf" target="_blank">Ver PDF</a>
+    </div>
+    <div class="project-card">
+      <strong>Tipos de Involucrados</strong>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/tipos-de-involucrados.pdf" target="_blank">Ver PDF</a>
+    </div>
+    <div class="project-card">
+      <strong>Mercado Potencial Ecohotel</strong>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/mercado-potencial-ecohotel.pdf" target="_blank">Ver PDF</a>
+    </div>
+    <div class="project-card">
+      <strong>Proyección de Mercado</strong>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/proyeccion-de-mercado.pdf" target="_blank">Ver PDF</a>
+    </div>
+    <div class="project-card">
+      <strong>Modelo CANVAS</strong>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/modelo-CANVAS.pdf" target="_blank">Ver PDF</a>
+    </div>
   </div>
-</div>
 
+  <p style="margin-top:40px;">
+    <a href="index.html" style="color:#1f6feb; text-decoration:none;">
+      ← Volver a la página principal
+    </a>
+  </p>
+
+</div>
 </body>
 </html>
